Add usage of proto from go binary

--- a/src/BUILD
+++ b/src/BUILD
@@ -1,14 +1,24 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
     name = "simple_proto",
     srcs = ["simple.proto"],
 )
 
+go_proto_library(
+    name = "simple_go_proto",
+    importpath = "github.com/misterwilliam/bazel_grpc/simple",
+    proto = ":simple_proto",
+)
+
 go_binary(
     name = "main",
     srcs = ["main.go"],
     importpath = "github.com/misterwilliam/bazel_grpc/main",
+    deps = [
+        ":simple_go_proto",
+    ],
 )
 
 go_library(
