--- a/src/BUILD
+++ b/src/BUILD
@@ -1,12 +1,12 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
+load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library", "go_grpc_library")
 
 proto_library(
     name = "simple_proto",
     srcs = ["simple.proto"],
 )
 
-go_proto_library(
+go_grpc_library(
     name = "simple_go_proto",
     importpath = "github.com/misterwilliam/bazel_grpc/simple",
     proto = ":simple_proto",
@@ -18,6 +18,8 @@ go_binary(
     importpath = "github.com/misterwilliam/bazel_grpc/main",
     deps = [
         ":simple_go_proto",
+        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_x_net//context:go_default_library",
     ],
 )
 
