--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -12,12 +12,32 @@ go_grpc_library(
     proto = ":simple_proto",
 )
 
+proto_library(
+  name = "has_external_deps_proto",
+  srcs = ["has_external_deps.proto"],
+  visibility = ["//visibility:public"],
+  deps = [
+    "@com_google_protobuf//:duration_proto",
+  ]
+)
+
+go_proto_library(
+  name = "has_external_deps_go_proto",
+  importpath = "github.com/misterwilliam/bazel_grpc/src/has_external_dep",
+  proto = ":has_external_deps_proto",
+  visibility = ["//visibility:public"],
+  deps = [
+    "@com_github_golang_protobuf//ptypes/duration:go_default_library",
+  ],
+)
+
 go_binary(
     name = "main",
     srcs = ["main.go"],
     importpath = "github.com/misterwilliam/bazel_grpc/main",
     deps = [
         ":simple_go_proto",
+        ":has_external_deps_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_net//context:go_default_library",
     ],
