--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -21,9 +21,27 @@ proto_library(
   ]
 )
 
+proto_library(
+  name = "has_external_deps_grpc_proto",
+  srcs = ["has_external_deps_grpc.proto"],
+  visibility = ["//visibility:public"],
+  deps = [
+    "@googleapis//:http_api_protos_proto",
+  ]
+)
+
+go_grpc_library(
+  name = "has_external_deps_grpc_grpc_proto",
+  importpath = "github.com/misterwilliam/bazel_grpc/src/has_external_deps_grpc",
+  proto = ":has_external_deps_grpc_proto",
+  deps = [
+     "@googleapis//:http_api_go_proto",
+  ]
+)
+
 go_proto_library(
   name = "has_external_deps_go_proto",
-  importpath = "github.com/misterwilliam/bazel_grpc/src/has_external_dep",
+  importpath = "github.com/misterwilliam/bazel_grpc/src/has_external_deps",
   proto = ":has_external_deps_proto",
   visibility = ["//visibility:public"],
   deps = [
@@ -38,21 +56,8 @@ go_binary(
     deps = [
         ":simple_go_proto",
         ":has_external_deps_go_proto",
+        ":has_external_deps_grpc_grpc_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_net//context:go_default_library",
     ],
-)
-
-go_library(
-    name = "go_default_library",
-    srcs = ["main.go"],
-    importpath = "github.com/example/project/src",
-    visibility = ["//visibility:private"],
-)
-
-go_binary(
-    name = "src",
-    embed = [":go_default_library"],
-    importpath = "github.com/example/project/src",
-    visibility = ["//visibility:public"],
 )
