--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -13,6 +13,30 @@ go_grpc_library(
 )
 
 proto_library(
+    name = "foo_proto",
+    srcs = ["foo.proto"],
+)
+
+go_proto_library(
+  name = "foo_go_proto",
+  importpath = "lib",
+  proto = ":foo_proto",
+  visibility = ["//visibility:public"],
+)
+
+# proto_library(
+#     name = "bar_proto",
+#     srcs = ["bar.proto"],
+# )
+#
+# go_proto_library(
+#   name = "bar_go_proto",
+#   importpath = "lib",
+#   proto = ":bar_proto",
+#   visibility = ["//visibility:public"],
+# )
+
+proto_library(
   name = "has_external_deps_proto",
   srcs = ["has_external_deps.proto"],
   visibility = ["//visibility:public"],
@@ -67,6 +91,8 @@ go_binary(
     srcs = ["main.go"],
     importpath = "github.com/misterwilliam/bazel_grpc/main",
     deps = [
+#        ":bar_go_proto",
+        ":foo_go_proto",
         ":simple_go_proto",
         ":has_external_deps_go_proto",
         ":has_external_deps_grpc_grpc_proto",
