--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -2,6 +2,36 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library", "go_grpc_library")
 
 proto_library(
+    name = "parent_proto",
+    srcs = ["parent.proto"],
+    visibility = ["//visibility:public"],
+    deps = [":child_proto"],
+)
+
+go_proto_library(
+    name = "parent_go_proto",
+    importpath = "github.com/misterwilliam/bazel_grpc/parent",
+    proto = ":parent_proto",
+    visibility = ["//visibility:public"],
+    deps = [
+        ":child_go_proto",
+    ],
+)
+
+proto_library(
+    name = "child_proto",
+    srcs = ["child.proto"],
+    visibility = ["//visibility:public"],
+)
+
+go_proto_library(
+    name = "child_go_proto",
+    importpath = "github.com/misterwilliam/bazel_grpc/child",
+    proto = ":child_proto",
+    visibility = ["//visibility:public"],
+)
+
+proto_library(
     name = "simple_proto",
     srcs = ["simple.proto"],
 )
@@ -18,59 +48,47 @@ proto_library(
 )
 
 go_proto_library(
-  name = "foo_go_proto",
-  importpath = "lib",
-  proto = ":foo_proto",
-  visibility = ["//visibility:public"],
-)
-
-# proto_library(
-#     name = "bar_proto",
-#     srcs = ["bar.proto"],
-# )
-#
-# go_proto_library(
-#   name = "bar_go_proto",
-#   importpath = "lib",
-#   proto = ":bar_proto",
-#   visibility = ["//visibility:public"],
-# )
-
-proto_library(
-  name = "has_external_deps_proto",
-  srcs = ["has_external_deps.proto"],
-  visibility = ["//visibility:public"],
-  deps = [
-    "@com_google_protobuf//:duration_proto",
-  ]
+    name = "foo_go_proto",
+    importpath = "lib",
+    proto = ":foo_proto",
+    visibility = ["//visibility:public"],
 )
 
 proto_library(
-  name = "has_external_deps_grpc_proto",
-  srcs = ["has_external_deps_grpc.proto"],
-  visibility = ["//visibility:public"],
-  deps = [
-    "@googleapis//:http_api_protos_proto",
-  ]
+    name = "has_external_deps_proto",
+    srcs = ["has_external_deps.proto"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "@com_google_protobuf//:duration_proto",
+    ],
+)
+
+proto_library(
+    name = "has_external_deps_grpc_proto",
+    srcs = ["has_external_deps_grpc.proto"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "@googleapis//:http_api_protos_proto",
+    ],
 )
 
 go_grpc_library(
-  name = "has_external_deps_grpc_grpc_proto",
-  importpath = "github.com/misterwilliam/bazel_grpc/src/has_external_deps_grpc",
-  proto = ":has_external_deps_grpc_proto",
-  deps = [
-     "@googleapis//:http_api_go_proto",
-  ]
+    name = "has_external_deps_grpc_grpc_proto",
+    importpath = "github.com/misterwilliam/bazel_grpc/src/has_external_deps_grpc",
+    proto = ":has_external_deps_grpc_proto",
+    deps = [
+        "@googleapis//:http_api_go_proto",
+    ],
 )
 
 go_proto_library(
-  name = "has_external_deps_go_proto",
-  importpath = "github.com/misterwilliam/bazel_grpc/src/has_external_deps",
-  proto = ":has_external_deps_proto",
-  visibility = ["//visibility:public"],
-  deps = [
-    "@com_github_golang_protobuf//ptypes/duration:go_default_library",
-  ],
+    name = "has_external_deps_go_proto",
+    importpath = "github.com/misterwilliam/bazel_grpc/src/has_external_deps",
+    proto = ":has_external_deps_proto",
+    visibility = ["//visibility:public"],
+    deps = [
+        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
+    ],
 )
 
 proto_library(
@@ -81,8 +99,8 @@ proto_library(
 
 go_proto_library(
     name = "no_go_package_go_proto",
-    proto = ":no_go_package_proto",
     importpath = "no_go_package",
+    proto = ":no_go_package_proto",
     visibility = ["//visibility:public"],
 )
 
@@ -91,12 +109,12 @@ go_binary(
     srcs = ["main.go"],
     importpath = "github.com/misterwilliam/bazel_grpc/main",
     deps = [
-#        ":bar_go_proto",
         ":foo_go_proto",
-        ":simple_go_proto",
         ":has_external_deps_go_proto",
         ":has_external_deps_grpc_grpc_proto",
         ":no_go_package_go_proto",
+        ":parent_go_proto",
+        ":simple_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_net//context:go_default_library",
     ],
